@@ -904,6 +904,9 @@ Localization
         #LOC_BDArmory_ReturnTurret = Return Turret
         #LOC_BDArmory_ToggleAnimation = Toggle Animation
 
+        #LOC_BDArmory_CustomFireKey = Custom Fire Key
+        #LOC_BDArmory_SetCustomFireKey = Set Custom Fire Key
+
         #LOC_BDArmory_NextTankSetup = Next tank setup
         #LOC_BDArmory_PreviousTankSetup = Previous tank setup
         #LOC_BDArmory_NextTexture = Next Texture
